# public/docs/openapi.yaml
@@ -79,11 +79,11 @@ paths:
                 email:
                   type: string
                   description: 'Must be a valid email address.'
-                  example: camron95@example.com
+                  example: kuvalis.delilah@example.org
                 password:
                   type: string
                   description: ''
-                  example: accusantium
+                  example: reiciendis
               required:
                 - email
                 - password
@@ -310,7 +310,7 @@ paths:
         in: path
         name: lang
         description: ''
-        example: vero
+        example: rerum
         required: true
         schema:
           type: string
@@ -449,19 +449,19 @@ paths:
                 username:
                   type: string
                   description: 'Must not be greater than 15 characters.'
-                  example: yfdzahrhfxotfjx
+                  example: bii
                 email:
                   type: string
                   description: 'Must be a valid email address.'
-                  example: beier.quinten@example.com
+                  example: kuhic.sibyl@example.org
                 password:
                   type: string
                   description: 'Must be at least 8 characters.'
-                  example: tktmsq
+                  example: gbn
                 phone:
                   type: string
                   description: ''
-                  example: nihil
+                  example: autem
               required:
                 - username
                 - email
@@ -605,18 +605,34 @@ paths:
                 amount:
                   type: string
                   description: ''
-                  example: itaque
-                payment_method_id:
+                  example: pariatur
+                payment_id:
                   type: string
                   description: ''
-                  example: exercitationem
+                  example: repellat
                 cart:
+                  type: object
+                  description: 'The Customer purchases  exempele [{"id":1,"quantity":2}] .'
+                  example:
+                    -
+                      id: 1
+                      quantity: 2
+                  properties: []
+                is_donate:
+                  type: boolean
+                  description: 'if user choise to donate.'
+                  example: false
+                lat:
                   type: string
-                  description: 'Must be a valid JSON string.'
-                  example: '["explicabo","dolore"]'
+                  description: 'The location lat .'
+                  example: vel
+                lng:
+                  type: string
+                  description: 'The location long .'
+                  example: tempora
               required:
                 - amount
-                - payment_method_id
+                - payment_id
                 - cart
     parameters:
       -
@@ -633,6 +649,80 @@ paths:
           present:
             summary: 'When the value is present'
             value: en
+  '/api/v1/{lang}/user/coupons':
+    get:
+      summary: 'user coupons'
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {YOUR_AUTH_KEY}'
+          schema:
+            type: string
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: 'coupons are exist'
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  data:
+                    -
+                      key: H-427379-12334-4
+                      participate_with: 6
+                      created_at: '04/08/2022 12:04:44'
+                      product:
+                        name_ar: 'الاسم '
+                        name_en: ut
+                        image: 'http://safaqatek.test/images/product/product_00.jpg'
+                        closing_at: '05/24/2022 09:05:39'
+                        price: 201
+                        currency: aed
+                properties:
+                  data:
+                    type: array
+                    example:
+                      -
+                        key: H-427379-12334-4
+                        participate_with: 6
+                        created_at: '04/08/2022 12:04:44'
+                        product:
+                          name_ar: 'الاسم '
+                          name_en: ut
+                          image: 'http://safaqatek.test/images/product/product_00.jpg'
+                          closing_at: '05/24/2022 09:05:39'
+                          price: 201
+                          currency: aed
+                    items:
+                      type: object
+      tags:
+        - 'User management'
+    parameters:
+      -
+        in: path
+        name: lang
+        description: ''
+        example: qui
+        required: true
+        schema:
+          type: string
   '/api/v1/{lang}/product':
     post:
       summary: 'get product'
